Fix footer styles
Were too far from post bottom and led to strange vertical rhythm

--- a/app/_assets/_scss/_components.content.scss
+++ b/app/_assets/_scss/_components.content.scss
@@ -21,3 +21,8 @@ body{
     @include pad(0px halve($inuit-base-spacing-unit));
 }
 
+.post--footer{
+    padding-top: 0 !important;
+    text-align: center;
+    font-style: italic;
+}
